--- a/src/index.css
+++ b/src/index.css
@@ -165,8 +165,8 @@ background-image: linear-gradient(to top, #bdc2e8 0%, #bdc2e8 1%, #e6dee9 100%);
 	border: 1px dotted black;
 	border-radius: 1rem;
 	padding: 2rem;
-	background-color: #454545;
-	color:#ddd;
+	background-color: #385976;
+	color:rgb(252, 252, 252);
 	margin: 1rem;
 /*
 */
@@ -175,3 +175,9 @@ background-image: linear-gradient(to top, #bdc2e8 0%, #bdc2e8 1%, #e6dee9 100%);
 .blogSelection:hover{
 	border: 1px solid #1793CC;
 }
+
+.BlogViewContainerStyle{
+		background-image: linear-gradient(15deg, #07340B 0%, #769CBE 100%);
+	
+		padding:20px;
+	}
